Fix visible non-current slides.

--- a/common.css
+++ b/common.css
@@ -72,6 +72,7 @@ pre {
     position: absolute;
     width: 100%;
     height: 100%;
+    visibility: hidden;
     /* transitions */
     /*
     -webkit-transition-property:         -webkit-transform;
@@ -92,6 +93,7 @@ pre {
     z-index: 2;
 }
 .slide.current {
+    visibility: visible;
     -webkit-transform:  translate3d(0, 0, 0);
     -moz-transform:     translate3d(0, 0, 0);
     -ms-transform:      translate3d(0, 0, 0);
